# inspect_cmake_multiplatform

./: README.md
linux/: CMakeLists.txt
linux/external_lib/: CMakeLists.txt
linux/src/: main.cpp
ms-windows/: CMakeLists.txt
ms-windows/external_dll/: CMakeLists.txt
ms-windows/external_lib/: CMakeLists.txt
ms-windows/external_lib/include/: hello.h
ms-windows/external_lib/src/: hello.cpp
multiplatform/external_lib/: CMakeLists.txt
multiplatform/external_lib/include/: hello.h
multiplatform/external_lib/src/: hello.cpp
multiplatform/src/: main.cpp
